[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Menus/PauseMenuPopupDialog.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Objects/Weapons/lasernoise.wav" type="AudioStream" id=2]
[ext_resource path="res://_common/GUI/AudioLevels.tscn" type="PackedScene" id=3]

[node name="PauseMenuPopupDialog" type="PopupDialog"]
pause_mode = 2
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 400 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 405.0

[node name="PausedTitle" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 380.0
margin_bottom = 14.0
text = "Game Paused"
align = 1

[node name="Audio" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 18.0
margin_right = 380.0
margin_bottom = 43.0

[node name="HBoxContainerFullscreen" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 380.0
margin_bottom = 87.0
alignment = 1

[node name="FullscreenButton" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainerFullscreen"]
margin_left = 117.0
margin_right = 263.0
margin_bottom = 40.0
text = "Fullscreen"

[node name="StartWaveButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 120.0
margin_top = 91.0
margin_right = 260.0
margin_bottom = 131.0
rect_min_size = Vector2( 140, 40 )
size_flags_horizontal = 6
text = "Start Next Wave!"

[node name="InstructionText" type="Label" parent="MarginContainer/VBoxContainer"]
margin_left = 49.0
margin_top = 135.0
margin_right = 331.0
margin_bottom = 251.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Use WASD and mouse to move, 
Shift to dash.
1,2,3 to select a tool or weapon.
Protect your spare shells at your base.
Build towers with the construction hammer.
Upgrade nearby towers with the F key.
"
align = 1

[node name="SecretDebugOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 255.0
margin_right = 380.0
margin_bottom = 317.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SecretDebugOptions"]
margin_right = 380.0
margin_bottom = 20.0

[node name="FreeMoneyButton" type="Button" parent="MarginContainer/VBoxContainer/SecretDebugOptions/HBoxContainer"]
margin_right = 188.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Free Money!"

[node name="BonusHealthButton" type="Button" parent="MarginContainer/VBoxContainer/SecretDebugOptions/HBoxContainer"]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1000 health!"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SecretDebugOptions"]
margin_top = 24.0
margin_right = 380.0
margin_bottom = 44.0

[node name="DieNowButton" type="Button" parent="MarginContainer/VBoxContainer/SecretDebugOptions/HBoxContainer2"]
margin_right = 188.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Die Instantly"

[node name="SpawnCreepsButton" type="Button" parent="MarginContainer/VBoxContainer/SecretDebugOptions/HBoxContainer2"]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Spawn Creeps Nearby"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SecretDebugOptions"]
margin_top = 48.0
margin_right = 380.0
margin_bottom = 62.0
text = "Keyboard shortcuts: alt/option to change  the camera zoom"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 321.0
margin_right = 380.0
margin_bottom = 341.0

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 53.0
margin_right = 135.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Quit Game"

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 254.0
margin_right = 318.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Resume"

[node name="CheatLabel" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 150.0
margin_top = 345.0
margin_right = 230.0
margin_bottom = 395.0
rect_min_size = Vector2( 75, 50 )
size_flags_horizontal = 6
text = "Easy Mode"

[node name="WhistleNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="popup_hide" from="." to="." method="_on_PauseMenuPopupDialog_popup_hide"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainerFullscreen/FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartWaveButton" to="." method="_on_StartWaveButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SecretDebugOptions/HBoxContainer/FreeMoneyButton" to="." method="_on_FreeMoneyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SecretDebugOptions/HBoxContainer/BonusHealthButton" to="." method="_on_BonusHealthButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SecretDebugOptions/HBoxContainer2/DieNowButton" to="." method="_on_DieNowButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SecretDebugOptions/HBoxContainer2/SpawnCreepsButton" to="." method="_on_SpawnCreepsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CheatLabel" to="." method="_on_CheatLabel_pressed"]
